deploy/foo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-exiegress
  namespace: team-security
spec:
  podSelector: {}
  policyTypes:
  - Egress
